# cryptoOS

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
hyperliquid/hyperliquid-system/: .env.example  DOCUMENTATION_INDEX.md  DUPLICATION_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  PROCESS_DUPLICATION_ANALYSIS.md  README.md  REPORT.md  SYSTEM_DOCUMENTATION.md  __main__.py  pyproject.toml  requirements.txt  test_compare_orders.py  test_ws_orders.py
hyperliquid/hyperliquid-system/src/: __init__.py  config.py  database.py  main.py
hyperliquid/hyperliquid-system/src/api/: __init__.py  cloudfront.py  hyperliquid.py  persistent_trader_orders_ws.py  persistent_trader_ws.py  stats_data.py  websocket.py
hyperliquid/hyperliquid-system/src/jobs/: __init__.py  archive.py  btc_all_mids_ws.py  btc_candles.py  btc_candles_ws.py  btc_daily_stats.py  btc_funding.py  btc_orderbook.py  btc_orderbook_ws.py  btc_signals.py  btc_ticker.py  btc_trades.py  btc_trades_ws.py  leaderboard.py  scheduler.py  trader_orders.py  trader_positions.py  trader_positions_ws.py
hyperliquid/hyperliquid-system/src/models/: __init__.py  base.py  btc_market.py  signals.py  traders.py
hyperliquid/hyperliquid-system/src/strategies/: __init__.py  position_detection.py  signal_generation.py  trader_scoring.py
hyperliquid/hyperliquid-system/src/utils/: __init__.py  archive.py  helpers.py  position_inference.py  rate_limit_manager.py
hyperliquid/hyperliquid-system/tests/: conftest.py  test_api.py  test_models.py  test_strategies.py
market-scraper/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DOCUMENTATION.md  README.md  docker-compose.yml  pyproject.toml  run_server.sh  start_server.sh
market-scraper/config/: market_config.yaml  traders_config.yaml
market-scraper/docs/: CBBI_GUIDE.md  DATA_ANALYSIS_REPORT.md  DATA_STORAGE.md  MARKET_DATA_API.md  ONCHAIN_METRICS_IMPLEMENTATION_PLAN.md  TRADER_FILTER_GUIDES.md  VERIFIED_APIS.md
market-scraper/docs/architecture/: connectors.md  event_system.md  overview.md
market-scraper/docs/guides/: deployment.md  development.md  quickstart.md
market-scraper/examples/: custom_processor.py  docker-compose.prod.yml  simple_connector.py
market-scraper/scripts/: monitor_price.py  run_archive.py
market-scraper/src/market_scraper/: __init__.py  __main__.py
market-scraper/src/market_scraper/api/: __init__.py  dependencies.py  main.py  models.py
market-scraper/src/market_scraper/archival/: __init__.py  archiver.py  compressor.py  git_lfs_pusher.py
market-scraper/src/market_scraper/auth/: __init__.py  dependencies.py  security.py
market-scraper/src/market_scraper/binance_account/: __init__.py  client.py  models.py  security.py
market-scraper/src/market_scraper/config/: __init__.py  market_config.py  traders_config.py
market-scraper/src/market_scraper/connectors/: __init__.py  base.py  registry.py
market-scraper/src/market_scraper/core/: __init__.py  config.py  events.py  exceptions.py  types.py
market-scraper/src/market_scraper/event_bus/: __init__.py  base.py  memory_bus.py  redis_bus.py
market-scraper/src/market_scraper/orchestration/: __init__.py  health.py  lifecycle.py  scheduler.py
market-scraper/src/market_scraper/processors/: __init__.py  base.py  candle_processor.py  market_processor.py  metrics_processor.py  position_detection.py  position_inference.py  signal_generation.py  trader_scoring.py
market-scraper/src/market_scraper/services/: __init__.py  candle_backfill.py
market-scraper/src/market_scraper/static/: account.html
market-scraper/src/market_scraper/storage/: __init__.py  base.py  memory_repository.py  models.py  mongo_repository.py
market-scraper/src/market_scraper/streaming/: __init__.py  broadcast.py  subscriptions.py  websocket_server.py
market-scraper/src/market_scraper/utils/: __init__.py  health_server.py  hyperliquid.py  logging.py  metrics.py  safe_convert.py  watchdog.py
market-scraper/tests/: conftest.py
market-scraper/tests/e2e/: test_api.py
market-scraper/tests/integration/: __init__.py  test_archive_flow.py  test_connectors_live.py  test_event_bus.py  test_lifecycle_integration.py  test_storage.py  test_streaming.py
market-scraper/tests/unit/: test_imports.py
shared/: pyproject.toml
shared/src/crypto_shared/: __init__.py  utils.py
smart-money-signal-system/: .env.example  AGENTS.md  FINAL_IMPLEMENTATION_PLAN.md  README.md  REPORT.md  main.py  pyproject.toml
smart-money-signal-system/checkpoints/: rl_agent_20260426_120608.pt  rl_agent_20260426_173313.pt  rl_agent_20260426_230201.pt  rl_agent_20260427_050209.pt
smart-money-signal-system/config/: signal_system.yaml
smart-money-signal-system/critique/: implementation_plan_critique.md  ml_architecture_recommendation.md
smart-money-signal-system/docs/: architecture.md
smart-money-signal-system/docs/archive/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md
smart-money-signal-system/scripts/: monitor.sh
smart-money-signal-system/src/signal_system/: __init__.py  __main__.py  config.py  event_subscriber.py  runtime.py  runtime_config.py  signal_store.py
smart-money-signal-system/tests/integration/: __init__.py  test_event_flow.py
smart-money-signal-system/tests/unit/: __init__.py  test_api_root_path.py  test_dashboard_store.py  test_environment.py  test_event_processor_outcome.py  test_event_subscriber.py  test_outcome_store.py  test_outcome_tracker.py  test_parameter_server.py  test_policy.py  test_regime_detection.py  test_runtime_config.py  test_safe_convert.py  test_signal_processor.py  test_signal_processor_decision_trace.py  test_signal_processor_rl.py  test_signal_store.py  test_startup_mongo_wiring.py  test_training.py  test_weighting_engine.py  test_whale_detector.py
trading-watchlist/: README.md  pyproject.toml
trading-watchlist/src/trading_watchlist/: __init__.py  config.py  exporter.py
trading-watchlist/tests/: helpers.py  test_api.py  test_exporter.py  test_json_repository.py  test_parsers.py  test_writer.py
(+374 files in other folders)
