[project]
name = "cryptoos"
version = "0.1.0"
description = "Cryptocurrency market data and trading signal platform"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.1.0",
]

[tool.uv]
workspace = { members = ["market-scraper", "smart-money-signal-system", "shared"] }

[tool.uv.sources]
crypto-shared = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
