[project]
name = "trading-watchlist"
version = "0.1.0"
description = "Stateless trading watchlist API backed by structured JSON with markdown fallback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
trading-watchlist-seed-json = "trading_watchlist.exporter:main"
trading-watchlist-refresh-from-state = "trading_watchlist.exporter:refresh_main"
trading-watchlist-write-state = "trading_watchlist.exporter:write_state_main"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_watchlist"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
